# gcsafety

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/gcsafety/: gcsafety.h
lib/: CMakeLists.txt
lib/checks/: AllocationAnnotationCheck.cpp  AllocationAnnotationCheck.h  CMakeLists.txt  GCAnnotation.h  InheritHeapClassCheck.cpp  InheritHeapClassCheck.h  PointerInvalidationCheck.cpp  PointerInvalidationCheck.h
lib/module/: CMakeLists.txt  GCSafetyModule.cpp  main.cpp
test/: CMakeLists.txt  check_clang_tidy.py  gcsafe-inherit-heap-class.cpp  gcsafe-pointer-invalidation.cpp  lit.cfg.py  lit.site.cfg.py.in
test/Inputs/: gcsafety_annotations.h
